--- a/WordPress/Resources/tr.lproj/Localizable.strings
+++ b/WordPress/Resources/tr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-06-10 19:40:35+0000 */
+/* Translation-Revision-Date: 2021-06-24 15:58:15+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: tr */
@@ -34,10 +34,10 @@
 "%1$@ to fix threats." = "Tehditleri düzeltmek için %1$@.";
 
 /* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
-"%1$d Like" = "%1$d Like";
+"%1$d Like" = "%1$d Beğen";
 
 /* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
-"%1$d Likes" = "%1$d Likes";
+"%1$d Likes" = "%1$d Beğenilenler";
 
 /* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
 "%1$d blogger likes this." = "%1$d blog yazarı bunu beğendi.";
@@ -758,13 +758,13 @@
 "Are you sure you want to mark this comment as Spam?" = "Bu yorumu istenmeyen olarak işaretlemek istediğinden emin misiniz?";
 
 /* Message asking for confirmation before marking a comment as trash */
-"Are you sure you want to mark this comment as Trash?" = "Are you sure you want to mark this comment as Trash?";
+"Are you sure you want to mark this comment as Trash?" = "Bu yorumu Çöp Kutusu olarak işaretlemek istediğinizden emin misiniz?";
 
 /* Message prompting the user to confirm that they want to permanently delete a group of media items. */
 "Are you sure you want to permanently delete these items?" = "Seçili öğeleri kalıcı olarak silmek istediğinizden emin misiniz?";
 
 /* Message asking for confirmation on comment deletion */
-"Are you sure you want to permanently delete this comment?" = "Are you sure you want to permanently delete this comment?";
+"Are you sure you want to permanently delete this comment?" = "Bu yorumu kalıcı olarak silmek istediğinizden emin misiniz?";
 
 /* Message prompting the user to confirm that they want to permanently delete a media item. Should match Calypso. */
 "Are you sure you want to permanently delete this item?" = "Bu ögeyi kalıcı olarak silmek istediğinizden emin misiniz?";
@@ -906,7 +906,7 @@
 "Back" = "Geri";
 
 /* No comment provided by engineer. */
-"Background Color" = "Background Color";
+"Background Color" = "Arka Plan Rengi";
 
 /* Title of the cell displaying status of a backup in progress */
 "Backing up site" = "Site yedekleniyor";
@@ -1289,7 +1289,7 @@
 "Choose Homepage" = "Ana sayfa seçin";
 
 /* Button allowing the user to choose an image from their device to use as their site icon */
-"Choose Image From My Device" = "Choose Image From My Device";
+"Choose Image From My Device" = "Cihazımdan Görsel seç";
 
 /* Title for settings section which allows user to select their home page and posts page */
 "Choose Pages" = "Sayfa Seç";
@@ -1819,7 +1819,7 @@
 "Create Story Post" = "Öykü Yayını Oluştur";
 
 /* Button allowing the user to create a site icon by choosing an emoji character */
-"Create With Emoji" = "Create With Emoji";
+"Create With Emoji" = "Emoji ile oluştur";
 
 /* Create WordPress.com site button */
 "Create WordPress.com site" = "WordPress.com sitesi oluştur";
@@ -1843,7 +1843,7 @@
 "Create a post, page, or story" = "Bir yazı, sayfa veya öykü oluştur";
 
 /* No comment provided by engineer. */
-"Create a site icon" = "Create a site icon";
+"Create a site icon" = "Bir site simgesi oluştur";
 
 /* Label that describes the download backup action */
 "Create downloadable backup" = "İndirilebilir yedekleme oluştur";
@@ -2538,7 +2538,7 @@
 "Error activating %@." = "%@ etkinleştirilirken hata oluştu.";
 
 /* Message shown when approving a Comment fails. */
-"Error approving comment" = "Error approving comment";
+"Error approving comment" = "Yorum onaylanırken hata oluştu";
 
 /* No comment (test)
    This secondary message is displayed if a user encounters a general error. */
@@ -2548,7 +2548,7 @@
 "Error deactivating %@." = "%@ devre dışı bırakılırken hata oluştu.";
 
 /* Message shown when deleting a Comment fails. */
-"Error deleting comment" = "Error deleting comment";
+"Error deleting comment" = "Yorum silinirken hata oluştu";
 
 /* There was an error disabling autoupdates for a plugin, placeholder is the plugin name */
 "Error disabling autoupdates for %@." = "%@ için otomatik güncellemeler devre dışı bırakılırken hata oluştu.";
@@ -2572,7 +2572,7 @@
 "Error loading plugins" = "Eklentiler yüklenirken hata oluştu";
 
 /* Message shown when marking a Comment as spam fails. */
-"Error marking comment as spam" = "Error marking comment as spam";
+"Error marking comment as spam" = "Yorum spam olarak işaretlenirken hata oluştu";
 
 /* Text displayed in HUD while a post revision is being loaded. */
 "Error occurred\nduring loading" = "Yükleme sırasında\nhata oluştu";
@@ -2608,7 +2608,7 @@
 "Error sending verification email. Check your connection and try again." = "Doğrulama e-postası gönderilirken hata oluştu. Bağlantınızı kontrol edin ve tekrar deneyin.";
 
 /* Message shown when unapproving a Comment fails. */
-"Error unapproving comment" = "Error unapproving comment";
+"Error unapproving comment" = "Yorumun onayı kaldırılırken hata oluştu ";
 
 /* There was an error updating a plugin, placeholder is the plugin name */
 "Error updating %@." = "%@ güncelleme hatası.";
@@ -3465,7 +3465,7 @@
 "Jetpack could not be installed at this time." = "Jetpack şu anda yüklenemiyor.";
 
 /* Subject of new Zendesk ticket. */
-"Jetpack for iOS Support" = "Jetpack for iOS Support";
+"Jetpack for iOS Support" = "iOS için Jetpack Desteği";
 
 /* The Jetpack view title for the success state */
 "Jetpack installed" = "Jetpack yüklendi";
@@ -4730,7 +4730,7 @@
 "People" = "İnsanlar";
 
 /* Informative tip shown to user in the Blogging Reminders Settings screen. */
-"People who post at least twice weekly get 87% more views on their site." = "People who post at least twice weekly get 87% more views on their site.";
+"People who post at least twice weekly get 87% more views on their site." = "Haftada en az iki kez paylaşım yapan kişiler sitelerinde %87 daha fazla görüntülenme alır.";
 
 /* Label for date periods. */
 "Period" = "Dönem";
@@ -5351,7 +5351,7 @@
 "Remove Site Icon" = "Site simgesini kaldır";
 
 /* No comment provided by engineer. */
-"Remove as Featured Image " = "Remove as Featured Image ";
+"Remove as Featured Image " = "Öne Çıkan Görsel kategorisinden kaldır ";
 
 /* Option to remove Insight from view. */
 "Remove from insights" = "Yönelimlerden çıkar";
@@ -5895,7 +5895,7 @@
 "Set Parent" = "Ana sayfayı belirleyin";
 
 /* No comment provided by engineer. */
-"Set as Featured Image " = "Set as Featured Image ";
+"Set as Featured Image " = "Öne Çıkarılan Görsel olarak ayarla ";
 
 /* Label for a button that sets the selected page as the site's Homepage */
 "Set as Homepage" = "Ana sayfa olarak ayarla";
@@ -5904,7 +5904,7 @@
 "Set as Posts Page" = "Yazılar sayfası olarak belirle";
 
 /* Title of the set goals button in the Blogging Reminders Settings flow. */
-"Set goals" = "Set goals";
+"Set goals" = "Hedefler belirle";
 
 /* The Jetpack view button title for the success state */
 "Set up" = "Devam et";
@@ -6630,7 +6630,7 @@
 "The certificate for this server is invalid. You might be connecting to a server that is pretending to be “%@” which could put your confidential information at risk.\n\nWould you like to trust the certificate anyway?" = "Bu sunucunun sertifikası geçersiz. “%@” taklidi yapan bir siteye bağlanıyor olabilirsiniz ki bu kişisel bilgilerinizin ele geçirilebilmesi açısından büyük bir risktir.\n\nSertifikaya güvenip devam etmek istiyor musunuz?";
 
 /* Message informing the user that posts page cannot be edited */
-"The content of your latest posts page is automatically generated and cannot be edited." = "The content of your latest posts page is automatically generated and cannot be edited.";
+"The content of your latest posts page is automatically generated and cannot be edited." = "Güncel paylaşımlar sayfanızın içeriği, otomatik olarak oluşturulur ve düzenlenemez.";
 
 /* Title for a threat that includes the file name of the file */
 "The file %1$@ contains a malicious code pattern" = "%1$@ dosyasında kötü amaçlı bir kod modeli var.";
@@ -6947,7 +6947,7 @@
 "Time to finish setting up your site! Our checklist walks you through the next steps." = "Site kurulumunuzu tamamlamanın zamanı geldi! Listemiz bir sonraki adımları size açıklar.";
 
 /* Title of a panel shown in the Blogging Reminders Settings screen, providing the user with a helpful tip. */
-"Tip" = "Tip";
+"Tip" = "İpucu";
 
 /* WordPress.com Marketing Footer Text */
 "Tips for getting the most out of WordPress.com." = "WordPress.com#&8217;dan en fazlasını almak için ipuçları.";
@@ -7421,7 +7421,7 @@
 "Update Profile Photo" = "Profil fotoğrafını güncelle";
 
 /* Title for sheet displayed allowing user to update their site icon */
-"Update Site Icon" = "Update Site Icon";
+"Update Site Icon" = "Site Simgesini Güncelle";
 
 /* Accessibility hint for the Comments button in Stats Overview. */
 "Updates the bar chart to show comments." = "Yorumları göstermek için çubuk grafiği günceller.";
@@ -8232,7 +8232,7 @@
 "You can update this any time via My Site > Site Settings" = "Bunu, Sitem > Site Ayarları'ndan istediğiniz zaman güncelleyebilirsiniz.";
 
 /* Prompt shown on the Blogging Reminders Settings screen. */
-"You can update this anytime" = "You can update this anytime";
+"You can update this anytime" = "Bunu istediğiniz zaman güncelleyebilirsiniz";
 
 /* No comment provided by engineer. */
 "You cannot use that email address to signup. We are having problems with them blocking some of our email. Please use another email provider." = "Bu e-posta adresini kayıt olmak için kullanamazsınız. Bazı e-postalarımızın engellenmesiyle ilgili problem yaşıyoruz. Farklı bir e-posta sağlayıcısı kullanın.";
@@ -8324,7 +8324,7 @@
 "You will not be able to change your username back." = "Kullanıcı adınızı geri döndüremezsiniz.";
 
 /* Description shown on the completion screen of the Blogging Reminders Settings screen. */
-"You'll get reminders to blog X times a week on DAY and DAY." = "You'll get reminders to blog X times a week on DAY and DAY.";
+"You'll get reminders to blog X times a week on DAY and DAY." = "\"GÜN GÜN\"de, haftada X kez blog yazmanız gerektiğini hatırlatan bildirimler alırsınız.";
 
 /* Displayed in the Notifications Tab as a title, when the Unread Filter shows no unread notifications as a title */
 "You're all up to date!" = "Tamamen güncelsiniz!";
@@ -8378,7 +8378,7 @@
 "Your post is currently being uploaded. Please wait until this completes." = "Gönderiniz şu anda yükleniyor. Lütfen bu işlem tamamlanıncaya kadar bekleyin.";
 
 /* Description on the first screen of the Blogging Reminders Settings flow. */
-"Your post is publishing... in the meantime, set up your blogging goals to get reminders, and track your progress." = "Your post is publishing... in the meantime, set up your blogging goals to get reminders, and track your progress.";
+"Your post is publishing... in the meantime, set up your blogging goals to get reminders, and track your progress." = "Gönderiniz yayınlanıyor... bu arada, hatırlatıcılar almak ve ilerleme durumunuzu takip etmek için blog hedeflerinizi ayarlayın.";
 
 /* Message of Export Content confirmation alert; substitution is user's email address */
 "Your posts, pages, and settings will be mailed to you at %@." = "Yazılarınız, sayfalarınız ve ayarlarınız %@ adresine e-posta ile gönderilecek.";
@@ -8399,7 +8399,7 @@
 "Your site has been succesfully restored" = "Siteniz başarıyla geri yüklendi";
 
 /* No comment provided by engineer. */
-"Your site icon is used across the web: in browser tabs, site previews on social media, and the WordPress.com Reader." = "Your site icon is used across the web: in browser tabs, site previews on social media, and the WordPress.com Reader.";
+"Your site icon is used across the web: in browser tabs, site previews on social media, and the WordPress.com Reader." = "Sitenizin simgesi tüm web'de kullanılır: Tarayıcı sekmelerinde, sosyal medyadaki site önizlemelerinde ve WordPress.com Okuyucu'da.";
 
 /* Title of a message displayed when user starts a restore operation */
 "Your site is being restored" = "Siteniz geri yüklendi";
